--- a/circlelib/src/main/res/layout/circle_card_info.xml
+++ b/circlelib/src/main/res/layout/circle_card_info.xml
@@ -39,6 +39,12 @@
                 android:textStyle="bold"
                 android:textColor="@color/reslib_colorBlack"
                 android:textSize="15sp" />
+            <LinearLayout
+                android:id="@+id/line_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+            </LinearLayout>
         </LinearLayout>
 
 
