1.删除重复工具类 2.创建群聊更改

--- a/groupchat/src/main/res/layout/groupchat_activity_search_user.xml
+++ b/groupchat/src/main/res/layout/groupchat_activity_search_user.xml
@@ -8,7 +8,7 @@
     android:background="@color/groupchat_white"
     tools:context=".SearchUserActivity">
 
-    <com.xingwang.groupchat.title.TopTitleView
+    <com.xingwang.swip.title.TopTitleView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
