--- a/groupchat/src/main/res/layout/groupchat_activity_build_group.xml
+++ b/groupchat/src/main/res/layout/groupchat_activity_build_group.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="@color/groupchat_background"
     tools:context=".BuildGroupActivity">
-    <com.xingwang.groupchat.title.TopTitleView
+    <com.xingwang.swip.title.TopTitleView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
