--- a/groupchat/src/main/res/layout/groupchat_activity_group_intro.xml
+++ b/groupchat/src/main/res/layout/groupchat_activity_group_intro.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".GroupIntroActivity">
-    <com.xingwang.groupchat.title.TopTitleView
+    <com.xingwang.swip.title.TopTitleView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
