--- a/groupchat/src/main/res/layout/groupchat_activity_group_setting.xml
+++ b/groupchat/src/main/res/layout/groupchat_activity_group_setting.xml
@@ -20,7 +20,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <com.xingwang.groupchat.title.TopTitleView
+            <com.xingwang.swip.title.TopTitleView
                 android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
