--- a/groupchat/src/main/res/layout/groupchat_activity_transfer.xml
+++ b/groupchat/src/main/res/layout/groupchat_activity_transfer.xml
@@ -8,7 +8,7 @@
     android:background="@color/groupchat_background"
     tools:context=".TransferActivity">
 
-    <com.xingwang.groupchat.title.TopTitleView
+    <com.xingwang.swip.title.TopTitleView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
