--- a/groupchat/src/main/res/layout/groupchat_activity_search_user.xml
+++ b/groupchat/src/main/res/layout/groupchat_activity_search_user.xml
@@ -74,7 +74,7 @@
         android:layout_weight="1"
         android:paddingLeft="5dp">
 
-        <androidx.recyclerview.widget.RecyclerView
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/lv_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
