1.通知项目群相关变动 2.添加用户界面完善

--- a/groupchat/src/main/res/layout/groupchat_activity_search_user.xml
+++ b/groupchat/src/main/res/layout/groupchat_activity_search_user.xml
@@ -74,11 +74,28 @@
         android:layout_weight="1"
         android:paddingLeft="5dp">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/lv_list"
+        <LinearLayout
+            android:id="@+id/line_recent_contact"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/groupchat_white" />
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/tv_recent_contact"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginBottom="10dp"
+                android:textColor="@color/groupchat_text_black"
+                android:text="最近联系人"/>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/lv_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/groupchat_white" />
+        </LinearLayout>
+
         <TextView
             android:id="@+id/tv_empty"
             style="@style/groupchat_tv_empty"/>
