--- a/circlelib/src/main/res/layout/circle_dialog_sheet.xml
+++ b/circlelib/src/main/res/layout/circle_dialog_sheet.xml
@@ -30,7 +30,7 @@
         <TextView
             android:id="@+id/tv_take_photo"
             style="@style/circle_dialog_tv"
-            android:text="从相册选择"/>
+            android:text="选择图片/视频"/>
     </LinearLayout>
     <View
         android:layout_width="0dp"
