--- a/essayLib/src/main/res/layout/essay_activity_essay_list.xml
+++ b/essayLib/src/main/res/layout/essay_activity_essay_list.xml
@@ -20,11 +20,16 @@
         <android.support.design.widget.TabLayout
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
-            android:padding="@dimen/essay_dp_5"
             app:tabMode="scrollable"
             android:layout_height="wrap_content" />
     </android.support.v7.widget.CardView>
 
+    <com.xingwang.essay.view.HorizontalListView
+        android:id="@+id/hlv_title"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/essay_background"
+        android:layout_marginRight="10dp" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
