--- a/essayLib/src/main/res/values/dimens.xml
+++ b/essayLib/src/main/res/values/dimens.xml
@@ -18,6 +18,7 @@
     <!--字体大小-->
     <dimen name="essay_sp_10">10sp</dimen>
     <dimen name="essay_sp_14">14sp</dimen>
+    <dimen name="essay_sp_15">15sp</dimen>
     <dimen name="essay_sp_16">16sp</dimen>
     <dimen name="essay_sp_18">18sp</dimen>
 </resources>
