--- a/circlelib/src/main/res/layout/circle_card_info.xml
+++ b/circlelib/src/main/res/layout/circle_card_info.xml
@@ -43,7 +43,8 @@
                 android:id="@+id/line_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginLeft="3dp">
             </LinearLayout>
         </LinearLayout>
 
