1.播放本地视频删除缩小功能 2.更改Glide引用context为全局

--- a/groupchat/src/main/res/layout/groupchat_activity_search_user.xml
+++ b/groupchat/src/main/res/layout/groupchat_activity_search_user.xml
@@ -37,7 +37,7 @@
                 android:drawableLeft="@drawable/groupchat_ic_search"
                 android:drawablePadding="10dp"
                 android:gravity="center_vertical"
-                android:hint="请输入要搜索的手机号码"
+                android:hint="请输入要搜索的手机号码/id"
                 android:inputType="phone"
                 android:maxLines="1"
                 android:paddingLeft="20dp"
