--- a/groupchat/src/main/res/layout/groupchat_item_group_select.xml
+++ b/groupchat/src/main/res/layout/groupchat_item_group_select.xml
@@ -22,9 +22,19 @@
             android:src="@drawable/groupchat_default_avatar" />
 
         <TextView
+            android:id="@+id/tv_admin_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/groupchat_dp_2"
+            android:textSize="@dimen/groupchat_sp_10"
+            android:background="@drawable/groupchat_admin_tv"
+            android:textColor="@color/groupchat_white"
+            android:layout_marginLeft="@dimen/groupchat_dp_10"
+            android:text="管理员"/>
+
+        <TextView
             android:id="@+id/tv_name"
-            android:layout_width="0dp"
-            android:layout_weight="6"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:singleLine="true"
@@ -33,14 +43,22 @@
             android:textColor="@color/groupchat_text_black"
             android:textSize="15sp"/>
 
-        <CheckBox
-            android:id="@+id/check_select"
-            style="@style/groupchat_checkbox_select"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:layout_centerVertical="true"
-            android:clickable="false"
-            android:focusable="false" />
+            android:gravity="right"
+            android:layout_height="match_parent">
+            <CheckBox
+                android:id="@+id/check_select"
+                style="@style/groupchat_checkbox_select"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:paddingRight="@dimen/groupchat_dp_12"
+                android:paddingLeft="@dimen/groupchat_dp_12"
+                android:clickable="false"
+                android:focusable="false" />
+        </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
